Added EF models and initial migration

--- a/Rent-Management-System/appsettings.json
+++ b/Rent-Management-System/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RentManagementSystem": "Server=(localdb)\\MSSQLLocalDB;Database=Rent_Management_System_Dev;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
